project-1/node-todo-cicd/appsk8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nodejs-svc 
  namespace: nodejs 

spec:
  selector:
    app: nodejsapp
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      # nodePort: 31800
