project-1/node-todo-cicd/appsk8s/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: nodejs-ing
  namespace: nodejs 
  anotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: myapp.local
      http:
        paths:
          - path: /
            pathType: Prefix 
            backend:
              service:
                name: nodejs-svc
                port:
                  number: 8000
          # - path: /nginx
          #   pathType:
          #     service:
          #       name: nginx-svc
          #       port:
          #         number: 80
